deploy/kustomize/overlays/prod/patches/keycloak-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args:
            - start
            - --proxy=edge
            - --hostname=auth.mcm.example.com
            - --hostname-strict=true
            - --hostname-strict-https=true
            - --import-realm
